crates/vvv/tests/corpus/snapshots/ts-parameters__unsupported-peer__json.snap
---
source: crates/vvv/tests/corpus.rs
expression: "corpus.run(args, true)"
---
exit 0
--- stdout ---
{
  "status": "ok",
  "schema": 1,
  "result": {
    "snapshot": "65d6d6f367c4d7292d5ed0275fb61e7a9d5260794d4ce5893e955c7d54344e88",
    "outcome": "unavailable",
    "reason": "unsupported_context"
  }
}
--- stderr ---
